LPS-XXXX buildREST
